fixed overflow error

--- a/health_tracker/static/health_tracker/style.css
+++ b/health_tracker/static/health_tracker/style.css
@@ -84,7 +84,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-y: scroll;
     background-color: lightpink;
 }
 
